# rustclock

./: Cargo.toml  LICENSE
src/: binance_ws_cli.rs  main.rs
templates/: index.html.tera
