[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = "0.15.0"
url = "2.2.2"
futures-util = "0.3.28"
tokio-native-tls = "0.3.0"
http = "0.2"
native-tls = "0.2"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ws"
path = "src/binance_ws_cli.rs"